Projects/Coffeeshop/style.css
/* ... */
.contact-section .contact-form .submit-button:hover {
  transform: scale(var(--hover-scale));
  background: var(--secondary-color);
  color: var(--primary-color);
}

/* Footer section styling */
.footer-section {
  padding: 20px 0;
  background: var(--dark-color);
  color: var(--white-color);
}

.footer-section .section-content {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.footer-section .policy-link {
  text-decoration: underline;
}

.footer-section .social-link-list {
  display: flex;
  gap: 25px
}

.footer-section .social-link-list .social-link {
  font-size: var(--font-size-l);
  transition: all 0.3s ease;
}

.footer-section .social-link-list .social-link:hover,
.footer-section .policy-text .policy-link:hover {
  transform: scale(var(--hover-scale));
  color: var(--secondary-color);
}

.footer-section .policy-text .separator {
  margin: 0 5px;
  color: var(--white-color);
}

@media screen and (max-width: 640px) {

  .menu-section .menu-list {
    gap: 60px;
  }
  .menu-section .menu-list .menu-item,
  .gallery-section .gallery-list .gallery-item {
    width: 100% !important;
  }

  .footer-section .section-content {
    flex-direction: column-reverse;
    gap: 20px;
  }
}

@media screen and (max-width: 900px) {
  :root {
    /* Font size */
    --font-size-m: 1rem;
    --font-size-l: 1.3rem;
    --font-size-xl: 1.5rem;
    --font-size-xxl: 1.8rem;
  }
  
  #menu-open-button,
  #menu-close-button {
    display: block;
    transition: all 0.3s ease;
  }

  #menu-open-button:hover,
  #menu-close-button:hover {
    transform: scale(1.2);
  }

  .navbar :where(#menu-close-button, #menu-open-button) {
    font-size: var(--font-size-l);
  }

  .navbar #menu-close-button {
    position: absolute;
    right: 30px;
    top: 30px;
  }

  .navbar #menu-open-button {
    color: var(--white-color);
  }

  .navbar .nav-menu {
    display: block;
    position: fixed;
    left: -300px;
    top: 0;
    width: 300px;
    height: 100%;
    background: var(--white-color);
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 100px;
    transition: left 0.2s ease;
  }

  body.show-mobile-menu header::before {
    content: "";
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    backdrop-filter: blur(5px);
    background: rgba(0, 0, 0, 0.2);
  }

  body.show-mobile-menu .navbar .nav-menu {
    left: 0;
  }

  .navbar .nav-menu .nav-link {
    color: var(--dark-color);
    display: block;
    margin-top: 17px;
    font-size: var(--font-size-l);
    transition: all 0.3s ease;
  }

  .navbar .nav-menu .nav-link:hover {
    transform: scale(var(--hover-scale));
  }

  .hero-section .section-content {
    gap: 50px;
    padding: 30px 20px 20px;
    flex-direction: column-reverse;
    text-align: center;
    justify-content: center;
  }

  .hero-section .hero-details :is(.subtitle, .description){
    max-width: 100%;
  }

  .hero-section .hero-details .buttons {
    justify-content: center;
  }

  .hero-section .hero-image-wrapper {
    max-width: 270px;
    margin-right: 0;
  }

  .about-section .section-content {
    gap: 70px;
    flex-direction: column;
  }

  .about-section .about-image-wrapper .about-image {
    width: 100%;
    height: 100%;
    max-width: 250px;
    aspect-ratio: 1;
  }

  menu-section .menu-list {
    gap: 30px;
  }

  .menu-section .menu-list .menu-item {
    width: calc(100% / 2 - 30px);
  }

  .menu-section .menu-list .menu-item .menu-image {
    max-width: 200px;
  }

  .gallery-section .gallery-list {
    gap: 30px;
  }

  .gallery-section .gallery-list .gallery-item {
    width: calc(100% / 2 - 30px);
  }

  .contact-section .section-content {
    align-items: center;
    flex-direction: column-reverse;
  }

  .contact-section .section-content .contact-form {
    margin-top: -50px;
    width: 75%;
  }

  .contact-section .section-content .contact-form .submit-button {
    width: 75%;
    display: block;
    margin: 0 auto;
  }
}

